# RandomQuotes-QT

./: .qmlls.ini  CMakeLists.txt  Main.qml  Main_copy.qml  main.cpp  quotegenerate.cpp  quotegenerate.h  quotes.json  quotesloader.h  resources.qrc  user.cpp  user.h
Qml/: InitScreen.qml  Main.qml  QuoteView.qml  Util.js
android/: AndroidManifest.xml
database/: quotes.db
